--- a/langchain_agents.ipynb
+++ b/langchain_agents.ipynb
@@ -64,7 +64,7 @@
       },
       "outputs": [],
       "source": [
-        "OPENAI_API_KEY = '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'"
+        "OPENAI_API_KEY = ''"
       ]
     },
     {
