--- a/langchain_chat_with_doc.ipynb
+++ b/langchain_chat_with_doc.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = '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'\n",
-    "os.environ['PINECONE_API_KEY'] = '8a9568f0-2ab5-49cc-98a7-ddf3a5c1beb8'\n",
-    "os.environ['ENVIROMENT_KEY'] = 'eu-west1-gcp'"
+    "os.environ['OPENAI_API_KEY'] = ''\n",
+    "os.environ['PINECONE_API_KEY'] = ''\n",
+    "os.environ['ENVIROMENT_KEY'] = ''"
    ]
   },
   {
