--- a/langchain_agents.ipynb
+++ b/langchain_agents.ipynb
@@ -184,7 +184,7 @@
         "\n",
         "docstore=DocstoreExplorer(Wikipedia())\n",
         "# create a collection of tools \n",
-        "# the tool is a function that the agent can use when neccesary to complite designed tasks\n",
+        "# the tool is a function that the agent can use when neccesary to complete a task\n",
         "tools = [\n",
         "    Tool(\n",
         "        name=\"Search\",\n",
