--- a/langchain_agents.ipynb
+++ b/langchain_agents.ipynb
@@ -88,27 +88,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 15,
-      "id": "72d8968f",
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "OpenAI(cache=None, verbose=False, callback_manager=<langchain.callbacks.shared.SharedCallbackManager object at 0x0000027E7FE10CD0>, client=<class 'openai.api_resources.completion.Completion'>, model_name='text-davinci-003', temperature=0.0, max_tokens=256, top_p=1, frequency_penalty=0, presence_penalty=0, n=1, best_of=1, model_kwargs={}, openai_api_key='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', batch_size=20, request_timeout=None, logit_bias={}, max_retries=6, streaming=False)"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "llm"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "309g_2pqxzzB",
       "metadata": {
@@ -129,7 +108,7 @@
       "source": [
         "from langchain.callbacks import get_openai_callback\n",
         "\n",
-        "# define a function that return the agent answer alongside the cost in token of the query\n",
+        "# define a function that return the agent answer alongside the cost of the query (tokens/dollars)\n",
         "def output_and_tokens(agent, query):\n",
         "    with get_openai_callback() as cb:\n",
         "        result = agent(query)\n",
